# adex-supermarket

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
benchmark/: README.md  wrk.sh
config/: dev.toml  prod.toml
src/: cache.rs  config.rs  lib.rs  main.rs  market.rs  sentry_api.rs  status.rs  status_test.rs  units_for_slot.rs  units_for_slot_test.rs  util.rs
src/cache/: api_client.rs  mock_client.rs
