[package]
name = "supermarket"
version = "0.1.0"
authors = ["Lachezar Lechev <lachezar.lechev@adex.network>"]
edition = "2018"

[dependencies]
primitives = { git = "https://github.com/AdExNetwork/adex-validator-stack-rust", branch = "supermarket-changes" }
chrono = { version = "0.4" }
uaparser = "0.4"
futures = { version = "0.3" }
# Server
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync"] }
hyper = { version = "0.13", features = ["stream"] }
http = "0.2"

reqwest = { version = "0.10", features = ["json"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# CLI
clap = "2.33"
toml = "0.5"
url = { version = "2.1", features = ["serde"]}

# Logging
slog = { version = "2.5" }
slog-term = "2.5"
slog-async = "2.5"
# Other
lazy_static = "1.4"

[dev-dependencies]
wiremock = "0.2"
