[package]
name = "supermarket"
version = "0.1.0"
authors = ["Lachezar Lechev <lachezar@adex.network>"]
edition = "2018"

[dependencies]
primitives = { git = "https://github.com/AdExNetwork/adex-validator-stack-rust", branch = "dev" }
chrono = { version = "0.4" }
futures = { version = "0.3" }
async-trait = { version = "^0.1" }
thiserror = "^1.0"

# Server
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "signal"] }
hyper-tls = "0.4"
hyper = { version = "0.13", features = ["stream"] }
http = "0.2"

reqwest = { version = "=0.10.10", features = ["json", "cookies"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "0.7"

# CLI
clap = "2.33"
toml = "0.5"

# Logging
slog = { version = "2.7" }
slog-term = "2.6"
slog-async = "2.5"
# Other
lazy_static = "1.4"
url = { version = "2.2", features = ["serde"]}
# UA parsing
woothee = "^0.11"

[dev-dependencies]
wiremock = "0.4"
pretty_assertions = "^0.6"
